src/llvmparser/llvmParser.py
# Generated from llvm.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class llvmParser ( Parser ):

    grammarFileName = "llvm.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'i64'", "'ptr'", "'void'", "'i1'", "'declare'", 
                     "'('", "')'", "'define'", "'{'", "'}'", "'='", "'type'", 
                     "'global'", "'['", "'x'", "'i8'", "']'", "'c'", "'zeroinitializer'", 
                     "','", "':'", "'ret'", "'call'", "'add'", "'sub'", 
                     "'mul'", "'sdiv'", "'srem'", "'shl'", "'ashr'", "'and'", 
                     "'or'", "'xor'", "'br'", "'label'", "'%'", "'load'", 
                     "'store'", "'getelementptr'", "'icmp'", "'eq'", "'ne'", 
                     "'slt'", "'sgt'", "'sle'", "'sge'", "'phi'", "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "INTEGER", "Label", "Identifier", "Privatevariable", 
                      "Global_var", "StringLiteral", "WS" ]

    RULE_module = 0
    RULE_type = 1
    RULE_function_declare = 2
    RULE_function = 3
    RULE_typedelcare = 4
    RULE_globalvariable = 5
    RULE_string_declare = 6
    RULE_globalarray = 7
    RULE_params = 8
    RULE_types = 9
    RULE_parameter = 10
    RULE_basic_block = 11
    RULE_instruction = 12
    RULE_ret = 13
    RULE_call = 14
    RULE_binary_op = 15
    RULE_bin_op = 16
    RULE_branch = 17
    RULE_load = 18
    RULE_var = 19
    RULE_store = 20
    RULE_getelementptr = 21
    RULE_ptrtype = 22
    RULE_compare = 23
    RULE_cond = 24
    RULE_phi = 25
    RULE_value = 26
    RULE_constant = 27

    ruleNames =  [ "module", "type", "function_declare", "function", "typedelcare", 
                   "globalvariable", "string_declare", "globalarray", "params", 
                   "types", "parameter", "basic_block", "instruction", "ret", 
                   "call", "binary_op", "bin_op", "branch", "load", "var", 
                   "store", "getelementptr", "ptrtype", "compare", "cond", 
                   "phi", "value", "constant" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    INTEGER=49
    Label=50
    Identifier=51
    Privatevariable=52
    Global_var=53
    StringLiteral=54
    WS=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModuleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.FunctionContext)
            else:
                return self.getTypedRuleContext(llvmParser.FunctionContext,i)


        def function_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.Function_declareContext)
            else:
                return self.getTypedRuleContext(llvmParser.Function_declareContext,i)


        def globalvariable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.GlobalvariableContext)
            else:
                return self.getTypedRuleContext(llvmParser.GlobalvariableContext,i)


        def string_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.String_declareContext)
            else:
                return self.getTypedRuleContext(llvmParser.String_declareContext,i)


        def typedelcare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.TypedelcareContext)
            else:
                return self.getTypedRuleContext(llvmParser.TypedelcareContext,i)


        def globalarray(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.GlobalarrayContext)
            else:
                return self.getTypedRuleContext(llvmParser.GlobalarrayContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_module

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule" ):
                listener.enterModule(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule" ):
                listener.exitModule(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = llvmParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 13510798882111776) != 0):
                self.state = 62
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 56
                    self.function()
                    pass

                elif la_ == 2:
                    self.state = 57
                    self.function_declare()
                    pass

                elif la_ == 3:
                    self.state = 58
                    self.globalvariable()
                    pass

                elif la_ == 4:
                    self.state = 59
                    self.string_declare()
                    pass

                elif la_ == 5:
                    self.state = 60
                    self.typedelcare()
                    pass

                elif la_ == 6:
                    self.state = 61
                    self.globalarray()
                    pass


                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return llvmParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = llvmParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def types(self):
            return self.getTypedRuleContext(llvmParser.TypesContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_function_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_declare" ):
                listener.enterFunction_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_declare" ):
                listener.exitFunction_declare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_declare" ):
                return visitor.visitFunction_declare(self)
            else:
                return visitor.visitChildren(self)




    def function_declare(self):

        localctx = llvmParser.Function_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(llvmParser.T__4)
            self.state = 70
            self.type_()
            self.state = 71
            self.match(llvmParser.Global_var)
            self.state = 72
            self.match(llvmParser.T__5)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 73
                self.types()


            self.state = 76
            self.match(llvmParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def params(self):
            return self.getTypedRuleContext(llvmParser.ParamsContext,0)


        def basic_block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.Basic_blockContext)
            else:
                return self.getTypedRuleContext(llvmParser.Basic_blockContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = llvmParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(llvmParser.T__7)
            self.state = 79
            self.type_()
            self.state = 80
            self.match(llvmParser.Global_var)
            self.state = 81
            self.match(llvmParser.T__5)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 82
                self.params()


            self.state = 85
            self.match(llvmParser.T__6)
            self.state = 86
            self.match(llvmParser.T__8)
            self.state = 88 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 87
                self.basic_block()
                self.state = 90 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==50):
                    break

            self.state = 92
            self.match(llvmParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedelcareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Privatevariable(self):
            return self.getToken(llvmParser.Privatevariable, 0)

        def types(self):
            return self.getTypedRuleContext(llvmParser.TypesContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_typedelcare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedelcare" ):
                listener.enterTypedelcare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedelcare" ):
                listener.exitTypedelcare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedelcare" ):
                return visitor.visitTypedelcare(self)
            else:
                return visitor.visitChildren(self)




    def typedelcare(self):

        localctx = llvmParser.TypedelcareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_typedelcare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(llvmParser.Privatevariable)
            self.state = 95
            self.match(llvmParser.T__10)
            self.state = 96
            self.match(llvmParser.T__11)
            self.state = 97
            self.match(llvmParser.T__8)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 98
                self.types()


            self.state = 101
            self.match(llvmParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalvariableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def constant(self):
            return self.getTypedRuleContext(llvmParser.ConstantContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_globalvariable

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalvariable" ):
                listener.enterGlobalvariable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalvariable" ):
                listener.exitGlobalvariable(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalvariable" ):
                return visitor.visitGlobalvariable(self)
            else:
                return visitor.visitChildren(self)




    def globalvariable(self):

        localctx = llvmParser.GlobalvariableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_globalvariable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(llvmParser.Global_var)
            self.state = 104
            self.match(llvmParser.T__10)
            self.state = 105
            self.match(llvmParser.T__12)
            self.state = 106
            self.type_()
            self.state = 107
            self.constant()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class String_declareContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def INTEGER(self):
            return self.getToken(llvmParser.INTEGER, 0)

        def StringLiteral(self):
            return self.getToken(llvmParser.StringLiteral, 0)

        def getRuleIndex(self):
            return llvmParser.RULE_string_declare

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_declare" ):
                listener.enterString_declare(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_declare" ):
                listener.exitString_declare(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString_declare" ):
                return visitor.visitString_declare(self)
            else:
                return visitor.visitChildren(self)




    def string_declare(self):

        localctx = llvmParser.String_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_string_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(llvmParser.Global_var)
            self.state = 110
            self.match(llvmParser.T__10)
            self.state = 111
            self.match(llvmParser.T__12)
            self.state = 112
            self.match(llvmParser.T__13)
            self.state = 113
            self.match(llvmParser.INTEGER)
            self.state = 114
            self.match(llvmParser.T__14)
            self.state = 115
            self.match(llvmParser.T__15)
            self.state = 116
            self.match(llvmParser.T__16)
            self.state = 117
            self.match(llvmParser.T__17)
            self.state = 118
            self.match(llvmParser.StringLiteral)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GlobalarrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def INTEGER(self):
            return self.getToken(llvmParser.INTEGER, 0)

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_globalarray

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobalarray" ):
                listener.enterGlobalarray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobalarray" ):
                listener.exitGlobalarray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobalarray" ):
                return visitor.visitGlobalarray(self)
            else:
                return visitor.visitChildren(self)




    def globalarray(self):

        localctx = llvmParser.GlobalarrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_globalarray)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(llvmParser.Global_var)
            self.state = 121
            self.match(llvmParser.T__10)
            self.state = 122
            self.match(llvmParser.T__12)
            self.state = 123
            self.match(llvmParser.T__13)
            self.state = 124
            self.match(llvmParser.INTEGER)
            self.state = 125
            self.match(llvmParser.T__14)
            self.state = 126
            self.type_()
            self.state = 127
            self.match(llvmParser.T__16)
            self.state = 128
            self.match(llvmParser.T__18)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.ParameterContext)
            else:
                return self.getTypedRuleContext(llvmParser.ParameterContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = llvmParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.parameter()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 131
                self.match(llvmParser.T__19)
                self.state = 132
                self.parameter()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.TypeContext)
            else:
                return self.getTypedRuleContext(llvmParser.TypeContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_types

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypes" ):
                listener.enterTypes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypes" ):
                listener.exitTypes(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes" ):
                return visitor.visitTypes(self)
            else:
                return visitor.visitChildren(self)




    def types(self):

        localctx = llvmParser.TypesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_types)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.type_()
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==20:
                self.state = 139
                self.match(llvmParser.T__19)
                self.state = 140
                self.type_()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(llvmParser.TypeContext,0)


        def Privatevariable(self):
            return self.getToken(llvmParser.Privatevariable, 0)

        def Global_var(self):
            return self.getToken(llvmParser.Global_var, 0)

        def constant(self):
            return self.getTypedRuleContext(llvmParser.ConstantContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = llvmParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter)
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.type_()
                self.state = 147
                self.match(llvmParser.Privatevariable)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.type_()
                self.state = 150
                self.match(llvmParser.Global_var)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.type_()
                self.state = 153
                self.constant()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Basic_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Label(self):
            return self.getToken(llvmParser.Label, 0)

        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(llvmParser.InstructionContext)
            else:
                return self.getTypedRuleContext(llvmParser.InstructionContext,i)


        def getRuleIndex(self):
            return llvmParser.RULE_basic_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBasic_block" ):
                listener.enterBasic_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBasic_block" ):
                listener.exitBasic_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBasic_block" ):
                return visitor.visitBasic_block(self)
            else:
                return visitor.visitChildren(self)




    def basic_block(self):

        localctx = llvmParser.Basic_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_basic_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(llvmParser.Label)
            self.state = 158
            self.match(llvmParser.T__20)
            self.state = 160 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 159
                self.instruction()
                self.state = 162 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4503891697729536) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ret(self):
            return self.getTypedRuleContext(llvmParser.RetContext,0)


        def call(self):
            return self.getTypedRuleContext(llvmParser.CallContext,0)


        def binary_op(self):
            return self.getTypedRuleContext(llvmParser.Binary_opContext,0)


        def branch(self):
            return self.getTypedRuleContext(llvmParser.BranchContext,0)


        def load(self):
            return self.getTypedRuleContext(llvmParser.LoadContext,0)


        def store(self):
            return self.getTypedRuleContext(llvmParser.StoreContext,0)


        def getelementptr(self):
            return self.getTypedRuleContext(llvmParser.GetelementptrContext,0)


        def compare(self):
            return self.getTypedRuleContext(llvmParser.CompareContext,0)


        def phi(self):
            return self.getTypedRuleContext(llvmParser.PhiContext,0)


        def getRuleIndex(self):
            return llvmParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = llvmParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_instruction)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 164
                self.ret()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 165
                self.call()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 166
                self.binary_op()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 167
                self.branch()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 168
                self.load()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 169
                self.store()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 170
                self.getelementptr()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 171
                self.compare()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 172
                self.phi()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetContext(ParserRuleContext):
        __slots__ = 'parser'
